FIX: Initial fix to prevent filter bar overlapping CentralSpace [t20744]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@13610 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/responsive/slim-style.css
+++ b/css/responsive/slim-style.css
@@ -362,6 +362,7 @@ body {
         color: #3a3a3a;
         opacity: 1;
         background-color: #ffffff;
+        margin-right: 5px;
     }
     #HeaderNav2 {
         padding-left: 0;
@@ -617,7 +618,6 @@ body {
 
     #UICenter {
         position: relative !important;
-        width: 98% !important;
         margin-top: 5px !important;
         top:0px !important;
         margin-left: 1% !important;
@@ -1156,7 +1156,10 @@ body {
     }
     #CollectionDiv #toggleThumbsLink {
         display:none;
-    }
+    } 
+    #FilterBarContainer {
+        height:100% !important;
+        }      
    
 }
 
